Fix drag & drop on mobile

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -918,15 +918,18 @@ ul.player-list {
 	overflow: visible;
 }
 
-/* No :hover outside of the div bounds */
-.card-column > div > div,
-.card-column > div > div {
-	pointer-events: none;
-}
-/* Except if its fully visible */
-.card-column > div:last-child > div,
-.card-column > div:last-child > div {
-	pointer-events: auto;
+/* Only use this hover rule on desktop (hover capabilities and a mouse or equivalent device) */
+@media (hover: hover) and (pointer: fine) {
+	/* No :hover outside of the div bounds, will let the card disappear when the mouse moves outside of it */
+	.card-column > div > div,
+	.card-column > div > div {
+		pointer-events: none;
+	}
+	/* Except if its fully visible */
+	.card-column > div:last-child > div,
+	.card-column > div:last-child > div {
+		pointer-events: auto;
+	}
 }
 
 .drag-column {
